--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutoDevOps.AI - Replace Your DevOps Team With AI Automation</title>
+    <title>OneOps - Replace Your DevOps Team With AI Automation</title>
     <meta name="description" content="The world's first fully automated DevOps platform. Zero configuration CI/CD, self-healing infrastructure, and AI-powered troubleshooting that works 24/7." />
-    <meta name="author" content="AutoDevOps.AI" />
+    <meta name="author" content="OneOps" />
 
-    <meta property="og:title" content="AutoDevOps.AI - Replace Your DevOps Team With AI Automation" />
+    <meta property="og:title" content="OneOps - Replace Your DevOps Team With AI Automation" />
     <meta property="og:description" content="The world's first fully automated DevOps platform. Zero configuration CI/CD, self-healing infrastructure, and AI-powered troubleshooting that works 24/7." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@autodevops_ai" />
+    <meta name="twitter:site" content="@oneops" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
