--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OneOps - Replace Your DevOps Team With AI Automation</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <title>OneOps ⚡ - Replace Your DevOps Team With AI Automation</title>
     <meta name="description" content="The world's first fully automated DevOps platform. Zero configuration CI/CD, self-healing infrastructure, and AI-powered troubleshooting that works 24/7." />
     <meta name="author" content="OneOps" />
 
-    <meta property="og:title" content="OneOps - Replace Your DevOps Team With AI Automation" />
+    <meta property="og:title" content="OneOps ⚡ - Replace Your DevOps Team With AI Automation" />
     <meta property="og:description" content="The world's first fully automated DevOps platform. Zero configuration CI/CD, self-healing infrastructure, and AI-powered troubleshooting that works 24/7." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
